--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,125 @@
 
 :root{
     font-family: 'Syne', sans-serif;
-    --red:#CA0200;
-    --light-blue:#A3B7F5;
+    --var-red:#CA0200;
+    --var-light-blue:#A3B7F5;
 }
+
+.menu{
+    margin: 10px 130px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo a{
+    font-size: 25px;
+    color: black;
+    font-weight: bold;
+}
+
+.menu-nav ul{
+    display: flex;
+    gap: 35px;
+    list-style: none;
+    flex-wrap: wrap;
+}
+
+.menu-nav li a{
+    color: black;
+    font-size: 20px;
+}
+
+.menu-nav li a:hover{
+    text-decoration: none;
+    font-style: italic;
+    color: var(--var-red);
+    transition: all 300ms ease-in-out;
+}
+
+.menu-icons {
+    display: flex;
+    gap: 21px;
+}
+
+.menu-icons a{
+    color: black;
+
+}
+
+.menu-icons a:hover{
+    color: var(--var-red);
+    transition: all 300ms ease-in-out;
+}
+
+
+.banner{
+    margin-top: 38px;
+    margin-left: 580px;
+    width: 941px;
+    height: 492px;
+    border-radius: 320px;
+    position: absolute;
+    background:linear-gradient(180deg, #CA0200 46.19%, rgba(255, 177, 153, 0) 122.31%); ;
+}
+
+.img-banner img{
+    width: 600px;
+    right: 300px;
+    bottom: -30px;
+    position: absolute;
+    background-size: cover;
+}
+
+.info-menu{
+    position: absolute;
+    z-index: 3;
+    margin-left: 130px;
+
+
+}
+
+.info-menu h1{
+    max-width: 695px;
+    font-size: 50px;
+    margin-top: 150px;
+    margin-bottom: 31px;
+}
+
+.info-menu span{
+    border:dashed 2px red;
+    padding: 5px 35px;
+    width: 218px;
+    height: 74px;
+    font-size: 50px;
+    color: var(--var-red);
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+.info-menu p{
+    font-size: 20px;
+    max-width: 473px;
+    margin-top: 30px;
+    margin-bottom: 36px;
+}
+
+.info-menu a{
+    width: 283px;
+    height: 69px;
+    text-decoration: none;
+    padding: 10px 20px;
+    font-size: 34px;
+    background-color: var(--var-red);
+    color: #fff;
+    border-radius: 24px;
+}
+
+.info-menu a:hover{
+    background-color: #fff;
+    color: var(--var-red);
+    border: 2px solid var(--var-red);
+    transition: all 300ms ease-in-out;
+}
+
+
