--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,73 +58,143 @@
     transition: all 300ms ease-in-out;
 }
 
-
 .banner{
-    margin-top: 38px;
-    margin-left: 580px;
-    width: 941px;
-    height: 492px;
-    border-radius: 320px;
-    position: absolute;
-    background:linear-gradient(180deg, #CA0200 46.19%, rgba(255, 177, 153, 0) 122.31%); ;
-}
-
-.img-banner img{
-    width: 600px;
-    right: 300px;
-    bottom: -30px;
-    position: absolute;
-    background-size: cover;
-}
-
-.info-menu{
-    position: absolute;
-    z-index: 3;
+    display: flex;
+    margin-top: 40px;
     margin-left: 130px;
-
-
 }
 
-.info-menu h1{
-    max-width: 695px;
-    font-size: 50px;
-    margin-top: 150px;
-    margin-bottom: 31px;
+.background-banner{
+    background:linear-gradient(to left, #CA0200 46.19%, rgba(255, 177, 153, 0) 122.31%);
+    width: 724px;
+    height: 400px;
+    border-radius: 360px;
 }
 
-.info-menu span{
-    border:dashed 2px red;
-    padding: 5px 35px;
-    width: 218px;
-    height: 74px;
+.background-banner img{
+    width: 500px;
+    right: 30px;
+    bottom: 30px;
+    margin-left: 40px;
+    margin-right: 600px;
+}
+
+.info-banner h1{
+    margin-top: 110px;
+    font-size: 35px;
+    margin-bottom: 44px;
+}
+
+.info-banner span{
+    font-family: 'IBM Plex Sans';
     font-size: 50px;
     color: var(--var-red);
-    font-family: 'IBM Plex Sans', sans-serif;
+    padding: 5px 35px;
+    border: dashed 2px var(--var-red);
 }
 
-.info-menu p{
-    font-size: 20px;
-    max-width: 473px;
+.info-banner p{
     margin-top: 30px;
-    margin-bottom: 36px;
+    font-weight: 500;
 }
 
-.info-menu a{
-    width: 283px;
-    height: 69px;
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 34px;
+
+.info-banner a{
+    padding: 5px 15px;
     background-color: var(--var-red);
+    width: 200px;
+    height: 50px;
+    display: flex;
+    font-size: 30px;
     color: #fff;
-    border-radius: 24px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    margin-top: 30px;
 }
 
-.info-menu a:hover{
+.info-banner a:hover{
     background-color: #fff;
     color: var(--var-red);
     border: 2px solid var(--var-red);
     transition: all 300ms ease-in-out;
 }
+
+.section-two{
+    margin-top: 67px;
+    display: flex;
+}
+
+.div01 img{
+    height: 211px;
+
+}
+
+.div02{
+    width: 600px;
+    height: 211px;
+    background: linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), linear-gradient(0deg, rgba(163, 183, 245, 0.84), rgba(163, 183, 245, 0.84)), url("https://images.unsplash.com/photo-1491553895911-0055eca6402d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.div02 ul{
+    display: flex;
+    gap: 100px;
+    list-style: none;
+    margin: 0px 30px;
+}
+
+.div02 ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+.div02 ul li a:hover{
+    color: var(--var-red);
+    transition: all 300ms ease-in-out;
+}
+
+.div03{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    height: 211px;
+    width: 100%;
+    
+
+}
+
+.explore{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+    cursor: pointer;
+    
+}
+
+.explore a{
+    font-size: 25px;
+    text-decoration: none;
+    color: #fff;
+}
+
+.explore i{
+    color: #fff;
+}
+
+.explore a:hover{
+    transition: all 300ms ease-in-out;
+    color: var(--var-red);
+}
+
 
 
