--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,5 +196,57 @@
     color: var(--var-red);
 }
 
+.section-three{
+    margin-top: 143px;
+    
+}
 
+.section-three-content{
+    display: flex;
+    gap: 113px;
+    justify-content: center;
+}
+
+.banner-section-three img{
+  width: 400px;
+
+}
+
+.text-section-three p{
+   max-width: 563px;
+   margin-top: 21px;
+   text-align: justify;
+}
+
+.text-section-three h2{
+    position: relative;
+    right: 160px;
+    line-height: 1;
+    max-width: 600px;
+    font-size: 80px;
+
+}
+
+
+.comprar a{
+    font-size: 34px;
+    color: #fff;
+    text-decoration: none;
+    margin-top: 64px;
+    width: 283px;
+    height: 69px;
+    border-radius: 34px;
+    background-color: var(--var-red);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+}
+
+.comprar a:hover{
+    background-color: #fff;
+    border: 2px solid var(--var-red);
+    transition: all 300ms ease-in-out;
+    color: var(--var-red);
+}
 
