--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,438 +1,429 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    font-family: 'Syne', sans-serif;
-    --var-red:#CA0200;
-    --var-light-blue:#A3B7F5;
+:root {
+  font-family: "Syne", sans-serif;
+  --var-red: #ca0200;
+  --var-light-blue: #a3b7f5;
 }
 
-.menu{
-    margin: 10px 130px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.menu {
+  margin: 10px 130px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.logo a{
-    font-size: 25px;
-    color: black;
-    font-weight: bold;
+.logo a {
+  font-size: 25px;
+  color: black;
+  font-weight: bold;
 }
 
-.menu-nav ul{
-    display: flex;
-    gap: 35px;
-    list-style: none;
-    flex-wrap: wrap;
+.menu-nav ul {
+  display: flex;
+  gap: 35px;
+  list-style: none;
+  flex-wrap: wrap;
 }
 
-.menu-nav li a{
-    color: black;
-    font-size: 20px;
+.menu-nav li a {
+  color: black;
+  font-size: 20px;
 }
 
-.menu-nav li a:hover{
-    text-decoration: none;
-    font-style: italic;
-    color: var(--var-red);
-    transition: all 300ms ease-in-out;
+.menu-nav li a:hover {
+  text-decoration: none;
+  font-style: italic;
+  color: var(--var-red);
+  transition: all 300ms ease-in-out;
 }
 
 .menu-icons {
-    display: flex;
-    gap: 21px;
+  display: flex;
+  gap: 21px;
 }
 
-.menu-icons a{
-    color: black;
-
+.menu-icons a {
+  color: black;
 }
 
-.menu-icons a:hover{
-    color: var(--var-red);
-    transition: all 300ms ease-in-out;
+.menu-icons a:hover {
+  color: var(--var-red);
+  transition: all 300ms ease-in-out;
 }
 
-.banner{
-    display: flex;
-    margin-top: 40px;
-    margin-left: 130px;
+.banner {
+  display: flex;
+  margin-top: 40px;
+  margin-left: 130px;
 }
 
-.background-banner{
-    background:linear-gradient(to left, #CA0200 46.19%, rgba(255, 177, 153, 0) 122.31%);
-    width: 724px;
-    height: 400px;
-    border-radius: 360px;
+.background-banner {
+  background: linear-gradient(
+    to left,
+    #ca0200 46.19%,
+    rgba(255, 177, 153, 0) 122.31%
+  );
+  width: 724px;
+  height: 400px;
+  border-radius: 360px;
 }
 
-.background-banner img{
-    width: 500px;
-    right: 30px;
-    bottom: 30px;
-    margin-left: 40px;
-    margin-right: 600px;
+.background-banner img {
+  width: 500px;
+  right: 30px;
+  bottom: 30px;
+  margin-left: 40px;
+  margin-right: 600px;
 }
 
-.info-banner h1{
-    margin-top: 110px;
-    font-size: 35px;
-    margin-bottom: 44px;
+.info-banner h1 {
+  margin-top: 110px;
+  font-size: 35px;
+  margin-bottom: 44px;
 }
 
-.info-banner span{
-    font-family: 'IBM Plex Sans';
-    font-size: 50px;
-    color: var(--var-red);
-    padding: 5px 35px;
-    border: dashed 2px var(--var-red);
+.info-banner span {
+  font-family: "IBM Plex Sans";
+  font-size: 50px;
+  color: var(--var-red);
+  padding: 5px 35px;
+  border: dashed 2px var(--var-red);
 }
 
-.info-banner p{
-    margin-top: 30px;
-    font-weight: 500;
+.info-banner p {
+  margin-top: 30px;
+  font-weight: 500;
 }
 
-
-.info-banner a{
-    padding: 5px 15px;
-    background-color: var(--var-red);
-    width: 200px;
-    height: 50px;
-    display: flex;
-    font-size: 30px;
-    color: #fff;
-    text-decoration: none;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    margin-top: 30px;
+.info-banner a {
+  padding: 5px 15px;
+  background-color: var(--var-red);
+  width: 200px;
+  height: 50px;
+  display: flex;
+  font-size: 30px;
+  color: #fff;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  margin-top: 30px;
 }
 
-.info-banner a:hover{
-    background-color: #fff;
-    color: var(--var-red);
-    border: 2px solid var(--var-red);
-    transition: all 300ms ease-in-out;
+.info-banner a:hover {
+  background-color: #fff;
+  color: var(--var-red);
+  border: 2px solid var(--var-red);
+  transition: all 300ms ease-in-out;
 }
 
-.section-two{
-    margin-top: 67px;
-    display: flex;
+.section-two {
+  margin-top: 67px;
+  display: flex;
 }
 
-.div01 img{
-    height: 211px;
-
+.div01 img {
+  height: 211px;
 }
 
-.div02{
-    width: 600px;
-    height: 211px;
-    background: linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), linear-gradient(0deg, rgba(163, 183, 245, 0.84), rgba(163, 183, 245, 0.84)), url("https://images.unsplash.com/photo-1491553895911-0055eca6402d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.div02 {
+  width: 600px;
+  height: 211px;
+  background: linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)),
+    linear-gradient(0deg, rgba(163, 183, 245, 0.84), rgba(163, 183, 245, 0.84)),
+    url("https://images.unsplash.com/photo-1491553895911-0055eca6402d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.div02 ul{
-    display: flex;
-    gap: 100px;
-    list-style: none;
-    margin: 0px 30px;
-}
-
-.div02 ul li a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 25px;
+.div02 ul {
+  display: flex;
+  gap: 100px;
+  list-style: none;
+  margin: 0px 30px;
 }
 
-.div02 ul li a:hover{
-    color: var(--var-red);
-    transition: all 300ms ease-in-out;
+.div02 ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 25px;
 }
 
-.div03{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    height: 211px;
-    width: 100%;
-    
-
+.div02 ul li a:hover {
+  color: var(--var-red);
+  transition: all 300ms ease-in-out;
 }
 
-.explore{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 200px;
-    cursor: pointer;
-    
+.div03 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 211px;
+  width: 100%;
 }
 
-.explore a{
-    font-size: 25px;
-    text-decoration: none;
-    color: #fff;
+.explore {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  cursor: pointer;
 }
 
-.explore i{
-    color: #fff;
+.explore a {
+  font-size: 25px;
+  text-decoration: none;
+  color: #fff;
 }
 
-.explore a:hover{
-    transition: all 300ms ease-in-out;
-    color: var(--var-red);
+.explore i {
+  color: #fff;
 }
 
-.section-three{
-    margin-top: 143px;
-    
+.explore a:hover {
+  transition: all 300ms ease-in-out;
+  color: var(--var-red);
 }
 
-.section-three-content{
-    display: flex;
-    gap: 113px;
-    justify-content: center;
+.section-three {
+  margin-top: 143px;
 }
 
-.banner-section-three img{
+.section-three-content {
+  display: flex;
+  gap: 113px;
+  justify-content: center;
+}
+
+.banner-section-three img {
   width: 400px;
-
 }
 
-.text-section-three p{
-   max-width: 563px;
-   margin-top: 21px;
-   text-align: justify;
+.text-section-three p {
+  max-width: 563px;
+  margin-top: 21px;
+  text-align: justify;
 }
 
-.text-section-three h2{
-    position: relative;
-    right: 160px;
-    line-height: 1;
-    max-width: 600px;
-    font-size: 80px;
-
+.text-section-three h2 {
+  position: relative;
+  right: 160px;
+  line-height: 1;
+  max-width: 600px;
+  font-size: 80px;
 }
 
-
-.comprar a{
-    font-size: 34px;
-    color: #fff;
-    text-decoration: none;
-    margin-top: 64px;
-    width: 283px;
-    height: 69px;
-    border-radius: 34px;
-    background-color: var(--var-red);
-    display: flex;
-    justify-content: center;
-    align-items: center;
- 
+.comprar a {
+  font-size: 34px;
+  color: #fff;
+  text-decoration: none;
+  margin-top: 64px;
+  width: 283px;
+  height: 69px;
+  border-radius: 34px;
+  background-color: var(--var-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.comprar a:hover{
-    background-color: #fff;
-    border: 2px solid var(--var-red);
-    transition: all 300ms ease-in-out;
-    color: var(--var-red);
+.comprar a:hover {
+  background-color: #fff;
+  border: 2px solid var(--var-red);
+  transition: all 300ms ease-in-out;
+  color: var(--var-red);
 }
 
-.section-four{
-    margin-top: 146px;
-
+.section-four {
+  margin-top: 146px;
 }
 
-.title-trending{
-    text-align: center;
-    font-size: 50px;
+.title-trending {
+  text-align: center;
+  font-size: 50px;
 }
 
-.content-trending{
-    margin: 77px 110px;
-    display: flex;
-    justify-content: space-between;
+.content-trending {
+  margin: 77px 110px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.image-content{
-    display: flex;
-    flex-direction: column;
-    width: 268px;
+.image-content {
+  display: flex;
+  flex-direction: column;
+  width: 268px;
 }
 
-.image-content img{
-    width: 268px;
-    margin-bottom: 16px;
+.image-content img {
+  width: 268px;
+  margin-bottom: 16px;
 }
 
-.text-trending{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.text-trending {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.text-trending h2{
-    margin-bottom: 9px;
+.text-trending h2 {
+  margin-bottom: 9px;
 }
 
-.text-trending span{
-    margin-bottom: 27px;
+.text-trending span {
+  margin-bottom: 27px;
 }
 
-.text-trending span i{
-    color: green;
+.text-trending span i {
+  color: green;
 }
 
-.text-trending a{
-    width: 235px;
-    height: 43px;
-    background-color: var(--var-red);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 21px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
+.text-trending a {
+  width: 235px;
+  height: 43px;
+  background-color: var(--var-red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 21px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
 }
 
-.text-trending a:hover{
-    background-color: #fff;
-    border: 2px solid var(--var-red);
-    color: var(--var-red);
-    transition: all 300ms ease-in-out;
+.text-trending a:hover {
+  background-color: #fff;
+  border: 2px solid var(--var-red);
+  color: var(--var-red);
+  transition: all 300ms ease-in-out;
 }
-.section-five{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.section-five-title{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
+.section-five {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.section-five-title h2{
-    font-size: 50px;
+.section-five-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
 }
 
-.section-five-title h3{
-    font-size: 20px;
-}
-.images-section-five{
-    display: flex;
-    gap: 23px;
-    margin-top: 37px;
+.section-five-title h2 {
+  font-size: 50px;
 }
 
-.images-small{
-    display: flex;
-    flex-direction: column;
-    gap: 23px;
+.section-five-title h3 {
+  font-size: 20px;
+}
+.images-section-five {
+  display: flex;
+  gap: 23px;
+  margin-top: 37px;
 }
 
-.content-section-six{
-    display: flex;
-    margin: 137px 100px;
-    height: 345px;
-    background-color: var(--var-light-blue);
-    border-radius: 33px;
-
+.images-small {
+  display: flex;
+  flex-direction: column;
+  gap: 23px;
 }
 
-.text-section-six{
-    padding: 73px 60px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+.content-section-six {
+  display: flex;
+  margin: 137px 100px;
+  height: 345px;
+  background-color: var(--var-light-blue);
+  border-radius: 33px;
 }
 
-.text-section-six h2{
-    font-size: 30px;
-    max-width: 600px;
+.text-section-six {
+  padding: 73px 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
-.text-section-six .diferent-color{
-    color: var(--var-red);
+.text-section-six h2 {
+  font-size: 30px;
+  max-width: 600px;
 }
 
-.text-section-six input{
-    width: 500px;
-    border-radius: 9px;
-    border: none;
-    box-shadow: none;
-    outline: 0;
-    padding: 10px;
+.text-section-six .diferent-color {
+  color: var(--var-red);
 }
 
-.text-section-six button{
-    width: 172px;
-    padding: 10px 30px;
-    border-radius: 34px;
-    font-size: 18px;
-    border: none;
-    background-color: var(--var-red);
-    color: #fff;
-    cursor: pointer;
+.text-section-six input {
+  width: 500px;
+  border-radius: 9px;
+  border: none;
+  box-shadow: none;
+  outline: 0;
+  padding: 10px;
 }
 
-.text-section-six button:hover{
-    background-color: #fff;
-    color: var(--var-red);
-    border: 2px solid var(--var-red);
-    transition: all 300ms ease-in-out;
+.text-section-six button {
+  width: 172px;
+  padding: 10px 30px;
+  border-radius: 34px;
+  font-size: 18px;
+  border: none;
+  background-color: var(--var-red);
+  color: #fff;
+  cursor: pointer;
 }
 
-.image-section-six img{
-    position: relative;
-    bottom: 60px;
-    left: 87px;
+.text-section-six button:hover {
+  background-color: #fff;
+  color: var(--var-red);
+  border: 2px solid var(--var-red);
+  transition: all 300ms ease-in-out;
 }
 
-.footer{
-    display: flex;
-    padding: 50px 120px;
-    justify-content: space-between;
-    background-color: black;
+.image-section-six img {
+  position: relative;
+  bottom: 60px;
+  left: 87px;
 }
 
-.footer .logo a{
-    color: #fff;
+.footer {
+  display: flex;
+  padding: 50px 120px;
+  justify-content: space-between;
+  background-color: black;
 }
 
-.nav-footer ul{
-    list-style: none;
-    line-height: 1.6;
-
+.footer .logo a {
+  color: #fff;
 }
 
-.nav-footer li a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 18px;
+.nav-footer ul {
+  list-style: none;
+  line-height: 1.6;
 }
-.nav-footer li a:hover{
-    color: var(--var-red);
+
+.nav-footer li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
 }
-.nav-footer h3{
-    color: #fff;
-    font-size: 22px;
+.nav-footer li a:hover {
+  color: var(--var-red);
+}
+.nav-footer h3 {
+  color: #fff;
+  font-size: 22px;
 }
